# Mangad-Cpp

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: I_Core_Values.hpp  Library.hpp
src/core/media/: I_Media.hpp  Media.cpp  Media.hpp
src/core/media/textual/: I_Series.hpp  I_Textual.hpp  Series.cpp  Series.hpp  Volume.cpp  Volume.hpp
src/core/media/textual/light_novel/: Light_Novel.cpp  Light_Novel.hpp  Light_Novel_Series.cpp  Light_Novel_Series.hpp
src/core/media/textual/manga/: Manga.cpp  Manga.hpp  Manga_Series.cpp  Manga_Series.hpp
src/core/person/: Author.cpp  Author.hpp  I_Person.hpp  Person.cpp  Person.hpp
